recursion.lessons.recursion.koch.Koch.scala.error
Koch:5: error: not found: value snowSide
snowSide(levels, length);
^Koch:8: error: not found: value snowSide
snowSide(levels, length);
^Koch:11: error: not found: value snowSide
snowSide(levels, length);
^